# Electronic-Components-Recognition

./: Electronic Components Recognation  README.md  READme.txt  main.py  pyproject.toml  requierments.txt  train.py
data/: clean_data.py
notebooks/data/: README.dataset.txt
notebooks/docs/: doc.md
