[project]
name = "electronic-components-classification"
version = "0.1.0"
description = "A deep learning project for real-time classification of electronic components using ResNet18 and PyTorch."
authors = [
    { name = "Mecha Team", email = "mohamedzbb8@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["jupyter", "notebook", "matplotlib", "seaborn"]

[tool.uv]
# if you are using uv as package manager
sync = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.9"
torch = "*"
torchvision = "*"
pillow = "*"
opencv-python = "*"
matplotlib = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
jupyter = "*"
notebook = "*"
seaborn = "*"
